straw hat skull

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="main.css">
     <meta name="author" content="Marika Mulder">
@@ -71,6 +72,12 @@
       <div class="flagSection">
         <div class="flagFlex">
           <div class="canadaFlag"></div>
+        </div>
+      </div>
+      
+      <div class="strawHatSection">
+        <div class="strawHatFlex">
+          <div class="strawHat"></div>
         </div>
       </div>
   
