--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
         </div>
       </div>
       
+      <div class="anbuSection">
+        <div class="anbuFlex">
+          <div class="anbu"></div>
+        </div>
+      </div>
+      
       <div class="strawHatSection">
         <div class="strawHatFlex">
           <div class="strawHat"></div>
