--- a/index.html
+++ b/index.html
@@ -86,7 +86,14 @@
           <div class="strawHat"></div>
         </div>
       </div>
-  
+    
+    <div class="totemSection">
+      <div class="totemFlex">
+        <div class="minecraftTotem"></div>
+      </div>
+    </div>
+
+    
     </div>
   </body>
 </html>
