--- a/index.html
+++ b/index.html
@@ -92,8 +92,13 @@
         <div class="minecraftTotem"></div>
       </div>
     </div>
-
     
+    <div class="digiviceSection">
+      <div class="digiviceFlex">
+        <div class="digivice"></div>
+      </div>
+    </div>
+
     </div>
   </body>
 </html>
