--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap" rel="stylesheet">
     <meta name="author" content="Marika Mulder">
     <meta
       name="description"
@@ -96,6 +99,14 @@
     <div class="digiviceSection">
       <div class="digiviceFlex">
         <div class="digivice"></div>
+      </div>
+    </div>
+    
+    <div class="bannerfallSection">
+      <div class="bannerfallFlex">
+        <div class="bannerfall">
+          <div class="bannerfallText">BanneR FALL</div>   
+        </div>
       </div>
     </div>
 
