--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
         </div>
       </div>
     </div>
+    
+    <div class="forestSection">
+      <div class="forestFlex">
+        <div class="forest"></div>
+      </div>
+    </div>
 
     </div>
   </body>
