looney tunes end screen

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
     <meta name="author" content="Marika Mulder">
     <meta
       name="description"
@@ -113,6 +114,12 @@
     <div class="forestSection">
       <div class="forestFlex">
         <div class="forest"></div>
+      </div>
+    </div>
+    
+    <div class="looneytunesSection">
+      <div class="looneytunesFlex">
+        <div class="looneytunes">The End</div>
       </div>
     </div>
 
