soul eater logo

--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
       </div>
     </div>
     
+    <div class="souleaterSection">
+      <div class="souleaterFlex">
+        <div class="souleater"></div>
+      </div>
+    </div>
+    
     <div class="looneytunesSection">
       <div class="looneytunesFlex">
         <div class="looneytunes">The End</div>
