--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
       </div>
     </div>
     
+    <div class="speechbubbleSection">
+      <div class="speechbubbleFlex">
+        <div class="speechbubble"></div>
+      </div>
+    </div>
+    
     <div class="looneytunesSection">
       <div class="looneytunesFlex">
         <div class="looneytunes">The End</div>
